# OpenGL_Cpp_Sandbox

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  glm_sandbox.cpp  house.cpp  lighting.cpp
dependencies/: CMakeLists.txt
dependencies/glad/: glad.c  glad.h
include/: flycamera.hpp  glutils.hpp
src/: CMakeLists.txt  glutils.cpp  main.cpp
src/shaders/: fragment.frag  fragment.txt  house.frag  lighting.frag  lighting.vert  vertex.txt  vertex.vert
src/shaders/lighting/: base.frag  light.frag
